--- a/lo.html
+++ b/lo.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
 </head>
+
 <body>
-    
+  <ol>
+      <li>咖啡</li>
+      <li >牛奶</li>
+    <li>茶</li>
+  </ol>
+  
+
+  <ol start="50">
+    <li>咖啡</li>
+    <li>牛奶</li>
+    <li>茶</li>
+  </ol>
+  <style>
+
+  </style>
+  <script>
+    var test = new Boolean();
+      document.write(test);
+    document.write("<br />");
+
+    var test = new Boolean(0);
+    document.write(test);
+    document.write("<br />");
+
+    var test = new Boolean(null);
+    document.write(test);
+    document.write("<br />");
+
+    var test = new Boolean("");
+    document.write(test);
+    document.write("<br />");
+
+    var test = new Boolean(NaN);
+    document.write(test);
+    document.write("<br />");
+  </script>
 </body>
+
+</html>
+</body>
+
 </html>
